# monorepo-nextjs-fastapi

./: .gitignore  Dockerfile.backend-compose  Dockerfile.frontend-compose  README.md  build.js  docker-compose.yml  nginx-compose.config
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/db/: models.py
frontend/: package-lock.json
