[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for monorepo"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "SQLAlchemy",
    "pydantic-settings",
    "sqlmodel",
    "psycopg2-binary",
    "alembic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
